<resources>
    <string name="app_name">مدیریت باغ ویلا پرچم</string>
    <string name="show_files">نمایش فایل ها</string>
    <string name="todo">TODO</string>
    <string name="add_file">افزودن فایل</string>
    <string name="show_images">نمایش تصاویر</string>
    <string name="edit_overlays">ویرایش تماس ها</string>
    <string name="file_code">کد فایل</string>
    <string name="file_title">عنوان فایل</string>
    <string name="file_text">توضیحات مختصر</string>
    <string name="price_title">عنوان قیمت</string>
    <string name="price">قیمت</string>
    <string name="area">متراژ</string>
    <string name="file_details">جزئیات کامل</string>
    <string name="file_picture">تصویر اصلی فایل</string>
    <string name="select_image">انتخاب تصویر</string>
    <string name="send">ارسال</string>
    <string name="view_devices">نمایش دستگاه ها</string>
    <string name="remove">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="phone_number_bottom">شماره تماس پایینی</string>
    <string name="phone_number_top">شماره تماس بالایی</string>
    <string name="save">ثبت</string>
    <string name="add_images">افزودن تصاویر</string>
    <string name="select_images">انتخاب تصاویر</string>
    <string name="apply_contact_info">اعمال اطلاعات تماس</string>
    <string name="send_new_images">ارسال تصاویر</string>
    <string name="add_new_device">افزودن دستگاه جدید</string>
    <string name="device_title">نام دستگاه</string>
    <string name="imei_sample">IMEI: 9876543219876543</string>
    <string name="this_device">همین دستگاه</string>
    <string name="add">افزودن</string>
    <string name="imei">IMEI</string>
    <string name="sending_please_wait">در حال ارسال، لطفا صبر کنید</string>
    <string name="accept">قبول</string>
    <string name="deny">رد</string>
    <string name="file_delete_confirm">آیا از حذف این فایل اطمینان دارید؟  امکان بازگشت پس از حذف وجود ندارد</string>
    <string name="remove_file_failed">حذف فایل با خطا مواجه شد</string>
    <string name="remove_file_succeeded">حذف فایل انجام شد</string>
    <string name="show_files_failed">نمایش فایل ها با خطا مواجه شد</string>
    <string name="processing_image_please_wait">در حال پردازش تصویر. لطفا صبر کنید</string>
    <string name="app_launcher_name">باغ ویلا پرچم</string>
    <string name="enter_file_code_first">ابتدا کد فایل را وارد کنید</string>
    <string name="numbers_not_been_set">شماره های تماس ثبت نشده اند</string>
    <string name="error_happened">خطایی رخ داد</string>
    <string name="all_fields_must_be_filled">تمام موارد باید پر شوند</string>
    <string name="chosen_images">تصویر انتخاب شده</string>
    <string name="contact_info_not_added">اطلاعات تماس اعمال نشده است</string>
    <string name="image_delete_confirm">آیا از حذف این تصویر اطمینان دارید؟ امکان بازگشت وجود ندارد</string>
    <string name="remove_image_failed">حذف تصویر با خطا مواجه شد</string>
    <string name="remove_image_succeeded">حذف تصویر انجام شد</string>
    <string name="device_delete_confirm">آیا از حذف این دستگاه اطمینان دارید؟ امکان بازگشت وجود ندارد</string>
    <string name="remove_device_failed">حذف دستگاه با خطا مواجه شد</string>
    <string name="remove_device_succeeded">حذف دستگاه انجام شد</string>
    <string name="add_device_failed">افزودن دستگاه با خطا مواجه شد</string>
    <string name="done">انجام شد</string>
    <string name="show_tags">نمایش برچسب ها</string>
    <string name="sold"> فروخته شد </string>
    <string name="unsold">فروخته نشد</string>
    <string name="article_code_generator">ساخت کد مقاله</string>
    <string name="generate_new_code">+ ساخت کد جدید</string>
    <string name="search">جستجو</string>
    <string name="remove_codes">- حذف کد ها</string>
    <string name="comments_management">مدیریت نظرات</string>
    <string name="approve_all">تایید همه</string>
    <string name="answer_comments">پاسخ به نظرات</string>
    <string name="answer_comment">پاسخ به نظر</string>
    <string name="answer_text">متن پاسخ</string>
    <string name="new_comments_management">مدیریت نظرات جدید</string>
    <string name="remove_comment">حذف نظر</string>
    <string name="irriversible_action">این عمل غیر قابل بازگشت است. آیا مطمئن هستید؟</string>
    <string name="edit_tags">ویرایش برچسب ها</string>
    <string name="apply_changes">اعمال تغییرات</string>
    <string name="tag_name">عنوان برچسب</string>
    <string name="blog_management">مدیریت مقالات</string>
    <string name="remove_blog">حذف بلاگ</string>
    <string name="offer">فروش ویژه</string>
    <string name="file_hidden_text">متن مخفی</string>
    <string name="instagram_posts">پستهای اینستاگرام</string>
    <string name="embed_code">Embed Code</string>
    <string name="clear_text">پاک کردن متن</string>
    <string name="paste_text">جایگذاری متن</string>
    <string name="connecting_to_server">در حال برقراری ارتباط با سرور...</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="device_not_approved">دستگاه تایید نشده است</string>
    <string name="waiting_for_device_approval">در انتظار تایید دستگاه</string>
    <string name="approve">تایید</string>
    <string name="enter_device_name_in_the_white_area">نام دستگاه را در کادر سفید وارد نمایید</string>
    <string name="enter_with_fingerprint_to_use_the_app">برای استفاده از اپ با اثر انگشت وارد شوید</string>
    <string name="enter_with_fingerprint">ورود با اثر انگشت</string>
    <string name="waiting_for_fingerprint">در انتظار اثرانگشت</string>
    <string name="enter_file_code">کد فایل را وارد نمایید</string>
    <string name="enter_blog_code">کد مقاله را وارد نمایید</string>
    <string name="no_images_selected">تصویری برای ارسال انتخاب نشده است</string>
    <string name="test">تست</string>
</resources>

