<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/picture_color_529BeA">
    
    
    <TextView
        android:id="@+id/tv_dialog_instagram_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yekan"
        android:labelFor="@id/et_dialog_instagram_post_embed_code"
        android:text="@string/embed_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <EditText
        android:id="@+id/et_dialog_instagram_post_embed_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dialog_instagram_post_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="10"
        android:textColor="@color/textSecondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_instagram_post_title" />
    
    
    <ProgressBar
        android:id="@+id/pb_dialog_instagram_post"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dialog_instagram_post_embed_code" />
    
    <Button
        android:id="@+id/btn_dialog_edit_instagram_post_clear_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clear_text"
        app:layout_constraintStart_toEndOf="@+id/btn_dialog_send_instagram_post_embed_code"
        app:layout_constraintTop_toBottomOf="@+id/et_dialog_instagram_post_embed_code" />
    
    <Button
        android:id="@+id/btn_dialog_edit_instagram_post_paste_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/paste_text"
        app:layout_constraintEnd_toStartOf="@+id/btn_dialog_send_instagram_post_embed_code"
        app:layout_constraintTop_toBottomOf="@+id/et_dialog_instagram_post_embed_code" />
    
    <Button
        android:id="@+id/btn_dialog_send_instagram_post_embed_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dialog_instagram_post_embed_code" />

</androidx.constraintlayout.widget.ConstraintLayout>
